@@ -1,23 +1,44 @@
 # redmics - redmine ics export plugin
-# Copyright (c) 2011  Frank Schwarz, frank.schwarz@buschmais.com
+# Copyright (c) 2006-2011  Jean-Philippe Lang
+# Copyright (c) 2012  Frank Schwarz, frank.schwarz@buschmais.com
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
 # as published by the Free Software Foundation; either version 2
 # of the License, or (at your option) any later version.
-# 
+#
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-class UserPrefsHooks < Redmine::Hook::ViewListener
-  
-  render_on :view_my_account_contextual, 
-            :inline => "| <%= link_to(l(:label_redmics_settings_userprefs), :action => 'redmics_settings') %>" 
+module Redmics
+  class QueryConditions
+    attr_reader :conditions
 
+    def initialize(condition = nil)
+      @conditions = ['1=1']
+      add(condition) if condition
+    end
+
+    def add(condition)
+      if condition.is_a?(Array)
+        @conditions.first << " AND (#{condition.first})"
+        @conditions += condition[1..-1]
+      elsif condition.is_a?(String)
+        @conditions.first << " AND (#{condition})"
+      else
+        raise "Unsupported #{condition.class} condition: #{condition}"
+      end
+      self
+    end
+
+    def <<(condition)
+      add(condition)
+    end
+  end
 end
